Bug 1317259 - Prevent double init in mozilla::TimeStamp::Startup() on Windows. r=froydnj, a=jcristau

MozReview-Commit-ID: JKfEFqo5qHj