mozglue/misc/TimeStamp_windows.cpp
@@ -474,9 +474,17 @@ HasStableTSC()
   return regs[3] & (1 << 8);
 }
 
+static bool gInitialized = false;
+
 MFBT_API void
 TimeStamp::Startup()
 {
+  if (gInitialized) {
+    return;
+  }
+
+  gInitialized = true;
+
   // Decide which implementation to use for the high-performance timer.
 
   HMODULE kernelDLL = GetModuleHandleW(L"kernel32.dll");
